--- a/src/styles.css
+++ b/src/styles.css
@@ -24,17 +24,12 @@ section, form > div {
   margin: 15px;
 }
 
-.imgContainer {
-  display: flex;
+.container {
+  width: 600px;
 }
 
-.character {
+.imgContainer, .character {
   display: flex;
-
-}
-
-.characterCard {
-  display: flex;
-  flex-direction: column;
-  flex: 3 1 0%
+  align-items: center;
+  flex-wrap: wrap;
 }
