Add README to each part and commented out code

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@ section, form > div {
   width: 600px;
 }
 
-.imgContainer, .todo {
+.img-container, .todo {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
